# pkg-icinga-debian

./: Makefile.in  configure  configure.in  icinga.spec  icinga_1.13.4.orig.tar.gz.delta  icinga_1.13.4.orig.tar.gz.id  icinga_1.14.0.orig.tar.gz.delta  icinga_1.14.0.orig.tar.gz.id  icinga_1.14.1.orig.tar.gz.delta  icinga_1.14.1.orig.tar.gz.id  icinga_1.14.2+ds.orig.tar.gz.id  icinga_1.14.2.orig.tar.gz.delta  icinga_1.14.2.orig.tar.gz.id  update-version
module/icinga-api/: .buildpath  .gitignore  .project  IcingaApi.php  Makefile.in  configure  configure.in  subst.in
module/icinga-api/contrib/development_tools/: create-col-array.php
module/icinga-api/contrib/ido2dbparser/: .gitignore  README
module/icinga-api/contrib/idoliteutils/: Makefile
module/icinga-api/contrib/idoliteutils/db/: idolite.sql  idolite.sqlite3
module/icinga-api/contrib/idoliteutils/doc/: AUTHORS  DOCUMENTATION  TODO
module/icinga-api/contrib/idoliteutils/inc/: idolite.h  idolite2db.h  idolitemod.h
module/icinga-api/contrib/idoliteutils/src/: idolite2db.c  idolitemod.c
module/icinga-api/doc/: AUTHORS  CHANGELOG  DOCUMENTATION  LICENSE  TODO
module/icinga-api/doc/api/: Doxyfile  makedoc.sh
module/icinga-api/doc/api/html/: IcingaApiCommandCollection_8php.html  IcingaApiCommandDispatcher_8php.html  IcingaApiCommandInterface_8php.html  IcingaApiResult_8php.html  (+283 more)
module/icinga-api/doc/examples/: command.phps  ido.phps  ido_auto_contact.phps
module/icinga-api/nbproject/: project.xml
module/icinga-api/nbproject/private/: private.properties
module/icinga-api/objects/: IcingaApiConstantsInterface.php
module/icinga-api/objects/command/: IcingaApiCommand.php  IcingaApiCommandCollection.php  IcingaApiCommandDispatcher.php  IcingaApiCommandInterface.php  IcingaApiCommandSend.php  IcingaApiCommandSendPipe.php  IcingaApiCommandSendSsh.php  IcingaApiCommandSendSsh.php.in
module/icinga-api/objects/connection/: IcingaApiConnection.php  IcingaApiConnectionDatabase.php  IcingaApiConnectionFile.php  IcingaApiConnectionIdo.php  IcingaApiConnectionInterface.php  IcingaApiConnectionLivestatus.php
module/icinga-api/objects/conversion/: IcingaApiConversionTime.php
module/icinga-api/objects/debug/: icingaApiDebugger.php
module/icinga-api/objects/ociPDO/: icingaApiPDO.php
module/icinga-api/objects/result/: IcingaApiResult.php  IcingaApiResultFile.php  IcingaApiResultIdo.php  IcingaApiResultInterface.php  IcingaApiResultLivestatus.php
module/icinga-api/objects/search/: IcingaApiSearch.php  IcingaApiSearchColumnsFile.php  IcingaApiSearchFile.php  IcingaApiSearchIdo.php  IcingaApiSearchInterface.php  IcingaApiSearchLivestatus.php
module/icinga-api/tests/: icingaApiTests.php  testResults.txt
module/icinga-api/tests/idoTests/: dbConfig.php  idoConnectionTest.php  idoCreateSearchTest.php  testSuite.php
(+169 files in other folders)
