#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(IcingaApi.php)

AC_PROG_GREP

AC_PREFIX_DEFAULT(/usr/local/icinga)

# helper functions (check aclocal.m4 from icinga-web)
AC_DEFUN([ACICINGA_USER_GUESS],[
   $2=$3
   for x in $1; do
    AC_MSG_CHECKING([if user $x exists])
     AS_IF([ $GREP -q "^$x:" /etc/passwd ],
           [ AC_MSG_RESULT([found]); $2=$x ; break],
           [ AC_MSG_RESULT([not found]) ])
   done
  ])

AC_DEFUN([ACICINGA_GROUP_GUESS],[
   $2=$3
   for x in $1; do
    AC_MSG_CHECKING([if group $x exists])
     AS_IF([ $GREP -q "^$x:" /etc/group ],
           [ AC_MSG_RESULT([found]); $2=$x ; break],
           [ AC_MSG_RESULT([not found]) ])
   done
])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Define install options
AC_ARG_WITH(icinga_user,--with-icinga-user=<user> sets user name to run icinga,icinga_user=$withval,icinga_user=icinga)
AC_ARG_WITH(icinga_group,--with-icinga-group=<grp> sets group name to run icinga,icinga_grp=$withval,icinga_grp=icinga)
AC_SUBST(icinga_user)
AC_SUBST(icinga_grp)
AC_DEFINE_UNQUOTED(DEFAULT_ICINGA_USER,"$icinga_user")
AC_DEFINE_UNQUOTED(DEFAULT_NAGIOS_USER,"$icinga_user")
AC_DEFINE_UNQUOTED(DEFAULT_ICINGA_GROUP,"$icinga_grp")
AC_DEFINE_UNQUOTED(DEFAULT_NAGIOS_GROUP,"$icinga_grp")
INSTALL_OPTS="-o $icinga_user -g $icinga_grp"
AC_SUBST(INSTALL_OPTS)

AC_ARG_WITH(command_user,--with-command-user=<user> sets user name for command access,command_user=$withval,command_user=$icinga_user)
AC_ARG_WITH(command_group,--with-command-group=<grp> sets group name for command access,command_grp=$withval,command_grp=$icinga_grp)
AC_SUBST(command_user)
AC_SUBST(command_grp)
COMMAND_OPTS="-o $command_user -g $command_grp"
AC_SUBST(COMMAND_OPTS)

# Users for webfiles
AC_ARG_WITH([web_user],
	AS_HELP_STRING([--with-web-user=USER], [username for web writable files (default www-data)]),
	web_user=$withval,
	ACICINGA_USER_GUESS([www wwwrun www-data apache httpd nobody],[web_user],[www-data])
)

AC_ARG_WITH([web_group],
	AS_HELP_STRING([--with-web-group=GROUP], [group for web writable files (default www-data)]),
	web_group=$withval,
	ACICINGA_GROUP_GUESS([www www-data apache httpd nogroup nobody],[web_group], [www-data])
)
AC_SUBST(web_user)
AC_SUBST(web_group)

INSTALL_OPTS_WEB="-o $web_user -g $web_group"
AC_SUBST(INSTALL_OPTS_WEB)



CFLAGS=""
AC_SUBST(CFLAGS)

AC_CONFIG_FILES(Makefile subst)

AC_OUTPUT

perl subst contrib/ido2dbparser/Ido2dbParser.php

